[package]
name = "image_veracity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["multipart"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.24.6", features = ["jpeg_rayon"] }
blockhash = "0.5.0"
data-encoding = "2.4.0"
ring = "0.16.20"
itertools = "0.10.5"
byteorder = "1.4.3"
base64 = "0.21.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
glob = "0.3.1"

[[bench]]
name = "hash_benchmark"
harness = false