[package]
name = "image_veracity"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["trillian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trillian-client = { path = "./trillian" }
eyre = "0.6.8"
axum = { version = "0.6.18", features = ["multipart", "macros"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.24.6", features = ["jpeg_rayon"] }
blockhash = "0.5.0"
data-encoding = "2.4.0"
ring = "0.16.20"
itertools = "0.10.5"
byteorder = "1.4.3"
base64 = "0.21.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rayon = "1.7.0"
aide = { version = "0.11.0", features = [
    "redoc",
    "axum",
    "axum-extra",
    "axum-multipart",
    "macros",
]  }
axum-extra = "0.7.4"
axum-jsonschema = { version = "0.6.0", features = ["aide"] }
axum-macros = "0.3.7"
schemars = { version = "0.8.12", features = ["uuid1"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
async-trait = "0.1.57"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
glob = "0.3.1"
clippy = "0.0.302"

[[bench]]
name = "hash_benchmark"
harness = false
