[package]
name = "trillian-client"
version = "0.1.0"
edition = "2021"
authors = ["J. Kerry Martin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trillian_client_cli"
path = "src/main.rs"

[dependencies]
eyre = "0.6.8"
thiserror = "1.0.40"
clap = { version = "4.3", features = ["derive"] }
tonic = "0.9.2"
tonic-types = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.0", features = ["full", "tracing"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2.5"
derive_builder = "0.12.0"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"]  }

